[package]
name = "a5b356bf40b6228103daadbd0c102f4af"
version = "0.1.0"
authors = ["kyokomi <email@kyokomi.dev>"]
edition = "2018"
description = "test publish."
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
